<resources>
    <string name="app_name">Bazz Fries</string>
    <string name="enter_your_name_here">Enter Your Name Here</string>
    <string name="fries_menu_order">Fries Menu Order</string>
    <string name="number_of_plates_you_want_to_order">Number of plates you want to order:</string>
    <string name="quantityText">0</string>
    <string name="plusText">+</string>
    <string name="minusButton">-</string>
    <string name="tomato_sauce">Tomato Sauce</string>
    <string name="white_sauce">White Sauce</string>
    <string name="submit_order">Submit Order</string>
    <string name="order_receipt">Order Receipt</string>
    <string name="final_name_textview">Name</string>
    <string name="tomato_sauce_textview">TextView</string>
    <string name="white_sauce_textview">TextView</string>
    <string name="payment_method">Payment Method:</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="name">Name:</string>
    <string name="email_receipt_gen">Generate Receipt in email</string>
    <string name="white_sauce_included">White Sauce is included.</string>
    <string name="background_image_of_app">Background Image of app</string>
    <string name="price">Total Price = Rs.0</string>
    <string name="price_per_plate_rs_40">Price per plate = Rs.40</string>
    <string name="back_to_order"><![CDATA[<- Back to order]]></string>
    <string name="order_receipt_heading">Order Receipt</string>
    <string name="orderReceiptTextView">Order Receipt text</string>
    <string name="title_activity_create_login">CreateLogin</string>
</resources>
